# ChangeLog for media-video/elltube
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/elltube/ChangeLog,v 1.2 2009/02/22 09:43:27 hwoarang Exp $

  22 Feb 2009; Markos Chandras <hwoarang@gentoo.org> elltube-0.3:
  Adding ppc keyword

*elltube-0.3 (15 Feb 2009)

  15 Feb 2009; Markos Chandras <hwoarang@gentoo.org> +metadata.xml,
  +elltube-0.3.ebuild:
  Initial import. Fixes bug #238772
