@@ -1,4 +1,4 @@
 DIST elltube-0.3.tar.bz2 156716 RMD160 9d074e8411c9cc99111d034072a05063c4c3e7c5 SHA1 92dce6dec662bec2bbae5cc6a59fbe16ace278ea SHA256 bda32a15ca4a464f9b131af4f41e8a027ca2982576bfa163be0aaae17c6ec48e
 EBUILD elltube-0.3.ebuild 730 RMD160 c14684cdce507ff06d9b353042a9928c450ac5c0 SHA1 0208b6e075e3e53445b2804ab23b9eeeb84c1e85 SHA256 4ab9ee39c0f35425854ad361fb35b8b84d71fbc5e42d20cf499377b295eeaea7
-MISC ChangeLog 457 RMD160 82cf3abd0aa08967e12a29887a495baa02bed75e SHA1 e80a18f15910d3fafbd421ebad2833c607d8bae8 SHA256 1c7260248a6ac49e196da16a1a93758ba300d5559b5f0f0fe03d9a13d17fb893
-MISC metadata.xml 292 RMD160 c3d73718b776b9f6968f6667002be2a3280cb84f SHA1 f22f5662bf6ca077873235dffa3a7d20fa8af54c SHA256 0f7697112b8329f5d5cc9406cd2fe3c9816c8d952f7c3ef217103421f8c3f73e
+MISC ChangeLog 562 RMD160 bc466312fb5a9cfdb4425b9322a4cd77cb58f9d7 SHA1 973990a073a8683461f9e45f53408006374a80df SHA256 424048182511e55e830ad016d88980d80aae563c293283d27707f4d6e6177ac4
+MISC metadata.xml 256 RMD160 b731b399700cd69a99d5eaa99fdfb8e83073fdd3 SHA1 799c43b1d50e7239a3c9fce7827cd65406c1ea58 SHA256 4a5726fd930a5f2dbbbc2a642348f44c538057e8eb3034a477c436293ebdda91
