@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd></herd>
+<herd>no-herd</herd>
 <maintainer>
-<email>hwoarang@gentoo.org</email>
-<name>Markos Chandras</name>
+  <email>hwoarang@gentoo.org</email>
+  <name>Markos Chandras</name>
 </maintainer>
-<longdescription lang="en">
-</longdescription>
 </pkgmetadata>
 
