@@ -1,6 +1,10 @@
 # ChangeLog for media-video/elltube
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/elltube/ChangeLog,v 1.2 2009/02/22 09:43:27 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/elltube/ChangeLog,v 1.3 2009/03/20 04:26:22 jmbsvicetto Exp $
+
+  20 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  metadata.xml:
+  Fixed metadata.
 
   22 Feb 2009; Markos Chandras <hwoarang@gentoo.org> elltube-0.3:
   Adding ppc keyword
